[package]
name = "ariar"
version = "0.1.0"
authors = ["Idan <idang1410@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
serde_bencode = "^0.2.2"
serde = "^1.0.0"
serde_derive = "^1.0.0"
serde_bytes = "0.11"
